# fastapi-github-oauth

./: README.md  pyproject.toml
app/: main.py
app/auth/: github.py
app/config/: settings.py
app/models/: helpers.py
example/: example.html
