[tool.poetry]
name = "fastapi-github-oauth"
version = "0.1.0"
description = "An isolated example to show github authorization-code oauth flow in fastapi for web application flow + simple HttpBearer route dependency"
authors = ["arrrrrmin"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.66.1"
python-dotenv = "^0.18.0"
uvicorn = "^0.14.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
