[tool.poetry]
name = "fastapi-github-oauth"
version = "0.1.0"
description = "An isolated example to show github authorization-code oauth flow in fastapi for web application flow + simple HttpBearer route dependency"
authors = ["arrrrrmin"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.92.0"
requests = "^2.31.0"
uvicorn = "^0.20.0"
python-dotenv = "^0.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
